// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`时机顺序快照 > 完整一个回合无出牌:0 号位回合开始到 1 号位出牌阶段 1`] = `
[
  "Turn.start:Turn",
  "Phase.before:Phase",
  "Phase.start:Phase",
  "Phase.end:Phase",
  "Phase.before:Phase",
  "Phase.start:Phase",
  "Phase.end:Phase",
  "Phase.before:Phase",
  "Phase.start:Phase",
  "DrawCards.before:DrawCards",
  "CardsMove.before:CardsMove",
  "CardsMove.after:CardsMove",
  "CardsMove.before:CardsMove",
  "CardsMove.after:CardsMove",
  "DrawCards.after:DrawCards",
  "Phase.end:Phase",
  "Phase.before:Phase",
  "Phase.start:Phase",
  "Phase.end:Phase",
  "Phase.before:Phase",
  "Phase.start:Phase",
  "Phase.end:Phase",
  "Phase.before:Phase",
  "Phase.start:Phase",
  "Phase.end:Phase",
  "Turn.end:Turn",
  "Turn.start:Turn",
  "Phase.before:Phase",
  "Phase.start:Phase",
  "Phase.end:Phase",
  "Phase.before:Phase",
  "Phase.start:Phase",
  "Phase.end:Phase",
  "Phase.before:Phase",
  "Phase.start:Phase",
  "DrawCards.before:DrawCards",
  "CardsMove.before:CardsMove",
  "CardsMove.after:CardsMove",
  "CardsMove.before:CardsMove",
  "CardsMove.after:CardsMove",
  "DrawCards.after:DrawCards",
  "Phase.end:Phase",
  "Phase.before:Phase",
  "Phase.start:Phase",
]
`;

exports[`时机顺序快照 > 杀 → 伤害 → 濒死 → 桃:受伤者自救 1`] = `
[
  "CardsMove.before:CardsMove",
  "CardsMove.after:CardsMove",
  "CardUse.before:CardUse",
  "CardUse.targeting:CardUse",
  "CardUse.targeted:CardUse",
  "CardUse.targetSpecified:CardUse",
  "CardUse.targetConfirmed:CardUse",
  "CardUse.using:CardUse",
  "CardEffect.before:CardEffect",
  "AskCard.before:AskCard",
  "AskCard.after:AskCard",
  "Damage.caused:Damage",
  "Damage.inflicted:Damage",
  "Dying.enter:Dying",
  "AskCard.before:AskCard",
  "AskCard.after:AskCard",
  "AskCard.before:AskCard",
  "CardsMove.before:CardsMove",
  "CardsMove.after:CardsMove",
  "CardUse.before:CardUse",
  "CardUse.targeting:CardUse",
  "CardUse.targeted:CardUse",
  "CardUse.targetSpecified:CardUse",
  "CardUse.targetConfirmed:CardUse",
  "CardUse.using:CardUse",
  "CardEffect.before:CardEffect",
  "Recover.before:Recover",
  "Recover.after:Recover",
  "CardEffect.after:CardEffect",
  "CardUse.after:CardUse",
  "CardsMove.before:CardsMove",
  "CardsMove.after:CardsMove",
  "AskCard.after:AskCard",
  "Dying.after:Dying",
  "Damage.done:Damage",
  "Damage.after:Damage",
  "CardEffect.after:CardEffect",
  "CardUse.after:CardUse",
  "CardsMove.before:CardsMove",
  "CardsMove.after:CardsMove",
]
`;

exports[`时机顺序快照 > 杀 → 死亡:无人出桃,对局继续 1`] = `
[
  "CardsMove.before:CardsMove",
  "CardsMove.after:CardsMove",
  "CardUse.before:CardUse",
  "CardUse.targeting:CardUse",
  "CardUse.targeted:CardUse",
  "CardUse.targetSpecified:CardUse",
  "CardUse.targetConfirmed:CardUse",
  "CardUse.using:CardUse",
  "CardEffect.before:CardEffect",
  "AskCard.before:AskCard",
  "AskCard.after:AskCard",
  "Damage.caused:Damage",
  "Damage.inflicted:Damage",
  "Dying.enter:Dying",
  "AskCard.before:AskCard",
  "AskCard.after:AskCard",
  "AskCard.before:AskCard",
  "AskCard.after:AskCard",
  "AskCard.before:AskCard",
  "AskCard.after:AskCard",
  "Dying.after:Dying",
  "Death.before:Death",
  "Death.after:Death",
  "Damage.done:Damage",
  "Damage.after:Damage",
  "CardEffect.after:CardEffect",
  "CardUse.after:CardUse",
  "CardsMove.before:CardsMove",
  "CardsMove.after:CardsMove",
]
`;

exports[`时机顺序快照 > 杀 → 闪:无伤害 1`] = `
[
  "CardsMove.before:CardsMove",
  "CardsMove.after:CardsMove",
  "CardUse.before:CardUse",
  "CardUse.targeting:CardUse",
  "CardUse.targeted:CardUse",
  "CardUse.targetSpecified:CardUse",
  "CardUse.targetConfirmed:CardUse",
  "CardUse.using:CardUse",
  "CardEffect.before:CardEffect",
  "AskCard.before:AskCard",
  "CardsMove.before:CardsMove",
  "CardsMove.after:CardsMove",
  "CardUse.before:CardUse",
  "CardUse.targeting:CardUse",
  "CardUse.using:CardUse",
  "CardEffect.before:CardEffect",
  "CardEffect.after:CardEffect",
  "CardUse.after:CardUse",
  "CardsMove.before:CardsMove",
  "CardsMove.after:CardsMove",
  "AskCard.after:AskCard",
  "CardEffect.after:CardEffect",
  "CardUse.after:CardUse",
  "CardsMove.before:CardsMove",
  "CardsMove.after:CardsMove",
]
`;
